k8s/base/deployment-keycloak.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: ${NAMESPACE}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:24.0
          args:
            - start-dev
            - --import-realm
            - --hostname=https://${KEYCLOAK_HOST}
          ports:
            - containerPort: 8080
              name: http
          readinessProbe:
            httpGet:
              path: /realms/master
              port: http
            initialDelaySeconds: 20
            periodSeconds: 10
          volumeMounts:
            - name: keycloak-realm
              mountPath: /opt/keycloak/data/import/realm-openwebui.json
              subPath: realm-openwebui.json
      volumes:
        - name: keycloak-realm
          configMap:
            name: keycloak-realm
