k8s/base/service-bridge.yaml
apiVersion: v1
kind: Service
metadata:
  name: bridge
  namespace: ${NAMESPACE}
spec:
  selector:
    app: bridge
  ports:
    - name: http
      port: 8081
      targetPort: 8081
