k8s/base/service-corpus-manager.yaml
apiVersion: v1
kind: Service
metadata:
  name: corpus-manager
  namespace: ${NAMESPACE}
spec:
  selector:
    app: corpus-manager
  ports:
    - name: http
      port: 80
      targetPort: http
