k8s/base/service-drive.yaml
apiVersion: v1
kind: Service
metadata:
  name: drive
  namespace: ${NAMESPACE}
spec:
  selector:
    app: drive
  ports:
    - name: http
      port: 80
      targetPort: http
