k8s/base/ingress-corpus-manager.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: corpus-manager
  namespace: ${NAMESPACE}
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-buffer-size: "32k"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ${CORPUS_MANAGER_HOST}
      secretName: ${CORPUS_MANAGER_TLS_SECRET_NAME}
  rules:
    - host: ${CORPUS_MANAGER_HOST}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: corpus-manager
                port:
                  number: 80
